:sparkles: Complete the model!!!
FCN with VGG.
ALL TEST PASSED!!!

--- a/Segmentation.ipynb
+++ b/Segmentation.ipynb
@@ -47,13 +47,16 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "get_source=kitti.get_source()\n",
-    "get_source.load_data('data/data_road',0.1)\n",
+    "# Configure the data get_source\n",
+    "get_source = kitti.get_source()\n",
+    "get_source.load_data('data/data_road', 0.1)\n",
     "\n",
-    "train_generator=get_source.train_generator\n",
+    "train_generator = get_source.train_generator\n",
     "valid_generator = get_source.valid_generator\n",
     "label_colors = get_source.label_colors"
    ]
@@ -384,13 +387,274 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Implement VGG into FCN\n",
+    "\n",
+    "### Set parameter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "DATA_DIR = './data'\n",
+    "VGG_DIR='./data/vgg'\n",
+    "EPOCHS = 20\n",
+    "BATCH_SIZE = 16\n",
+    "TENSORBOARD_DIR='./tensorboard_dir'\n",
+    "CHECKPOINT_INTERVAL=5\n",
+    "\n",
+    "NUM_CLASSES = 2\n",
+    "\n",
+    "RUNS_DIR = './runs'\n",
+    "MODEL_DIR = './models_3col'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Reshape the tensor so that it matches the number of classes and output size"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def reshape(x, num_classes, upscale_factor, name):\n",
+    "    \"\"\"\n",
+    "    Reshape the tensor so that it matches the number of classes and output size\n",
+    "    :param x:              input tensor\n",
+    "    :param num_classes:    number of classes\n",
+    "    :param upscale_factor: scaling factor\n",
+    "    :param name:           name of the resulting tensor\n",
+    "    :return:               reshaped tensor\n",
+    "    \"\"\"\n",
+    "    with tf.variable_scope(name):\n",
+    "        w_shape = [1, 1, int(x.get_shape()[3]), num_classes]\n",
+    "        w = tf.Variable(tf.truncated_normal(w_shape, 0, 0.1),\n",
+    "                        name=name + '_weights')\n",
+    "        b = tf.Variable(tf.zeros(num_classes), name=name + '_bias')\n",
+    "        resized = tf.nn.conv2d(x, w, strides=[1, 1, 1, 1], padding='VALID',\n",
+    "                               name=name + '_resized')\n",
+    "        resized = tf.nn.bias_add(resized, b, name=name + '_add_bias')\n",
+    "    upsampled = upsample(resized, num_classes, upscale_factor,\n",
+    "                         name + '_upsampled')\n",
+    "    return upsampled"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Implementing model(VGG in FCN)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "class model:\n",
+    "    def __init__(self, session):\n",
+    "        self.session = session\n",
+    "\n",
+    "    def build_from_vgg(self, vgg_dir, num_classes=2):\n",
+    "        \"\"\"\n",
+    "        Build the model for training based on a pre-define vgg16 model.\n",
+    "        :param vgg_dir:       directory where the vgg model should be stored\n",
+    "        :param num_classes:   number of classes\n",
+    "        \"\"\"\n",
+    "        self.num_classes = num_classes\n",
+    "        self.__load_vgg(vgg_dir)\n",
+    "        self.__make_result_tensors()\n",
+    "\n",
+    "    def build_from_metagraph(self, metagraph_file, checkpoint_file):\n",
+    "        \"\"\"\n",
+    "        Build the model for inference from a metagraph shapshot and weights\n",
+    "        checkpoint.\n",
+    "        \"\"\"\n",
+    "        sess = self.session\n",
+    "        saver = tf.train.import_meta_graph(metagraph_file)\n",
+    "        saver.restore(sess, checkpoint_file)\n",
+    "        self.image_input = sess.graph.get_tensor_by_name('image_input:0')\n",
+    "        self.keep_prob = sess.graph.get_tensor_by_name('keep_prob:0')\n",
+    "        self.logits = sess.graph.get_tensor_by_name('sum/Add_1:0')\n",
+    "        self.softmax = sess.graph.get_tensor_by_name('result/Softmax:0')\n",
+    "        self.classes = sess.graph.get_tensor_by_name('result/ArgMax:0')\n",
+    "\n",
+    "    def __load_vgg(self, vgg_dir):\n",
+    "        sess = self.session\n",
+    "        graph = tf.saved_model.loader.load(sess, ['vgg16'], vgg_dir)\n",
+    "        self.image_input = sess.graph.get_tensor_by_name('image_input:0')\n",
+    "        self.keep_prob = sess.graph.get_tensor_by_name('keep_prob:0')\n",
+    "        self.vgg_layer3 = sess.graph.get_tensor_by_name('layer3_out:0')\n",
+    "        self.vgg_layer4 = sess.graph.get_tensor_by_name('layer4_out:0')\n",
+    "        self.vgg_layer7 = sess.graph.get_tensor_by_name('layer7_out:0')\n",
+    "\n",
+    "    def __make_result_tensors(self):\n",
+    "        vgg3_reshaped = reshape(self.vgg_layer3, self.num_classes, 8,\n",
+    "                                'layer3_resize')\n",
+    "        vgg4_reshaped = reshape(self.vgg_layer4, self.num_classes, 16,\n",
+    "                                'layer4_resize')\n",
+    "        vgg7_reshaped = reshape(self.vgg_layer7, self.num_classes, 32,\n",
+    "                                'layer7_resize')\n",
+    "\n",
+    "        with tf.variable_scope('sum'):\n",
+    "            self.logits = tf.add(vgg3_reshaped,\n",
+    "                                 tf.add(2 * vgg4_reshaped, 4 * vgg7_reshaped))\n",
+    "        with tf.name_scope('result'):\n",
+    "            self.softmax = tf.nn.softmax(self.logits)\n",
+    "            self.classes = tf.argmax(self.softmax, axis=3)\n",
+    "\n",
+    "    def get_optimizer(self, labels, learning_rate=1e-4):\n",
+    "        with tf.variable_scope('reshape'):\n",
+    "            labels_reshaped = tf.reshape(labels, [-1, self.num_classes])\n",
+    "            logits_reshaped = tf.reshape(self.logits, [-1, self.num_classes])\n",
+    "            losses = tf.nn.softmax_cross_entropy_with_logits(\n",
+    "                labels=labels_reshaped,\n",
+    "                logits=logits_reshaped)\n",
+    "            loss = tf.reduce_mean(losses)\n",
+    "        with tf.variable_scope('optimizer'):\n",
+    "            optimizer = tf.train.AdamOptimizer(learning_rate)\n",
+    "            optimizer = optimizer.minimize(loss)\n",
+    "        return optimizer, loss"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Create Model"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "with tf.Session() as sess:\n",
+    "    print('Creating the model...')\n",
+    "    net = model(sess)\n",
+    "    net.build_from_vgg(VGG_DIR, get_source.num_classes)\n",
+    "\n",
+    "    labels = tf.placeholder(tf.float32,\n",
+    "                            shape=[None, None, None, get_source.num_classes])\n",
+    "\n",
+    "    optimizer, loss = net.get_optimizer(labels)\n",
+    "\n",
+    "    summary_writer = tf.summary.FileWriter(args.tensorboard_dir, sess.graph)\n",
+    "    saver = tf.train.Saver(max_to_keep=10)\n",
+    "\n",
+    "    label_mapper = tf.argmax(labels, axis=3)\n",
+    "    n_train_batches = int(math.ceil(get_source.num_training / args.batch_size))\n",
+    "\n",
+    "    initialize_uninitialized_variables(sess)\n",
+    "    print('Training...')\n",
+    "\n",
+    "    # Summaries\n",
+    "    validation_loss = tf.placeholder(tf.float32)\n",
+    "    validation_loss_summary_op = tf.summary.scalar('validation_loss',\n",
+    "                                                   validation_loss)\n",
+    "\n",
+    "    training_loss = tf.placeholder(tf.float32)\n",
+    "    training_loss_summary_op = tf.summary.scalar('training_loss',\n",
+    "                                                 training_loss)\n",
+    "\n",
+    "    validation_img = tf.placeholder(tf.float32, shape=[None, None, None, 3])\n",
+    "    validation_img_gt = tf.placeholder(tf.float32, shape=[None, None, None, 3])\n",
+    "    validation_img_summary_op = tf.summary.image('validation_img',\n",
+    "                                                 validation_img)\n",
+    "    validation_img_gt_summary_op = tf.summary.image('validation_img_gt',\n",
+    "                                                    validation_img_gt)\n",
+    "    validation_img_summary_ops = [validation_img_summary_op,\n",
+    "                                  validation_img_gt_summary_op]\n",
+    "\n",
+    "    for e in range(args.epochs):\n",
+    "        # Train\n",
+    "        generator = train_generator(args.batch_size)\n",
+    "        description = '[i] Epoch {:>2}/{}'.format(e + 1, args.epochs)\n",
+    "        training_loss_total = 0\n",
+    "        for x, y in tqdm(generator, total=n_train_batches,\n",
+    "                         desc=description, unit='batches'):\n",
+    "            feed = {net.image_input: x,\n",
+    "                    labels: y,\n",
+    "                    net.keep_prob: 0.5}\n",
+    "            loss_batch, _ = sess.run([loss, optimizer], feed_dict=feed)\n",
+    "            training_loss_total += loss_batch * x.shape[0]\n",
+    "        training_loss_total /= get_source.num_training\n",
+    "\n",
+    "        # Validate\n",
+    "        generator = valid_generator(args.batch_size)\n",
+    "        validation_loss_total = 0\n",
+    "        imgs = None\n",
+    "        img_labels = None\n",
+    "        img_labels_gt = None\n",
+    "        for x, y in generator:\n",
+    "            feed = {net.image_input: x,\n",
+    "                    labels: y,\n",
+    "                    net.keep_prob: 1}\n",
+    "            loss_batch, img_classes, y_mapped = sess.run([loss,\n",
+    "                                                          net.classes,\n",
+    "                                                          label_mapper],\n",
+    "                                                         feed_dict=feed)\n",
+    "            validation_loss_total += loss_batch * x.shape[0]\n",
+    "\n",
+    "            if imgs is None:\n",
+    "                imgs = x[:3, :, :, :]\n",
+    "                img_labels = img_classes[:3, :, :]\n",
+    "                img_labels_gt = y_mapped[:3, :, :]\n",
+    "\n",
+    "        validation_loss_total /= get_source.num_validation\n",
+    "\n",
+    "        # Write loss summary\n",
+    "        feed = {validation_loss: validation_loss_total,\n",
+    "                training_loss: training_loss_total}\n",
+    "        loss_summary = sess.run([validation_loss_summary_op,\n",
+    "                                 training_loss_summary_op],\n",
+    "                                feed_dict=feed)\n",
+    "\n",
+    "        summary_writer.add_summary(loss_summary[0], e)\n",
+    "        summary_writer.add_summary(loss_summary[1], e)\n",
+    "\n",
+    "        # Write image summary every 5 epochs\n",
+    "        if e % 5 == 0:\n",
+    "            imgs_inferred = draw_labels_batch(imgs, img_labels, label_colors)\n",
+    "            imgs_gt = draw_labels_batch(imgs, img_labels_gt, label_colors)\n",
+    "\n",
+    "            feed = {validation_img: imgs_inferred,\n",
+    "                    validation_img_gt: imgs_gt}\n",
+    "            validation_img_summaries = sess.run(validation_img_summary_ops,\n",
+    "                                                feed_dict=feed)\n",
+    "            summary_writer.add_summary(validation_img_summaries[0], e)\n",
+    "            summary_writer.add_summary(validation_img_summaries[1], e)\n",
+    "\n",
+    "        # Save a checktpoint\n",
+    "        if (e + 1) % args.checkpoint_interval == 0:\n",
+    "            checkpoint = '{}/e{}.ckpt'.format(args.name, e + 1)\n",
+    "            saver.save(sess, checkpoint)\n",
+    "            print('Checkpoint saved:', checkpoint)\n",
+    "\n",
+    "    checkpoint = '{}/final.ckpt'.format(args.name)\n",
+    "    saver.save(sess, checkpoint)\n",
+    "    print('Checkpoint saved:', checkpoint)"
+   ]
   }
  ],
  "metadata": {
